--- a/index.html
+++ b/index.html
@@ -8,9 +8,28 @@
     <title>Encriptador</title>
 </head>
 <body>
-
-
-
+    <main>
+        <span>a</span>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <div>
+            <img src="assets/info_icon.svg" alt="info_icon">
+            <p>Solo letras y sin acentos</p>
+        </div>
+        <div>
+            <button>Encriptador</button>
+            <button>Desencriptador</button>
+        </div>
+    </main>
+    <article>
+        <div>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <button>copiar</button>
+        </div>
+        <div>
+            <strong>Ningún mensaje fue encontrado</strong>
+            <p>ingresa el texto que desees encriptar o desencriptar.</p>
+        </div>
+    </article>
     <script src="./index.js"></script>
 </body>
 </html>
