--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 </head>
 <body>
     <main>
-        <span>a</span>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-        <div>
+        <h1>Encryptador</h1>
+        <textarea class="chart" name="chartInbox" id="chartInput" cols="30" rows="10"></textarea>
+        <div class="info">
             <img src="assets/info_icon.svg" alt="info_icon">
             <p>Solo letras y sin acentos</p>
         </div>
-        <div>
-            <button>Encriptador</button>
-            <button>Desencriptador</button>
+        <div class="btns">
+            <a href="#outputBox" onclick="encrypt()">Encriptador</a>
+            <a href="#outputBox" onclick="decrypt()">Desencriptador</a>
         </div>
     </main>
-    <article>
-        <div>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <button>copiar</button>
+    <article id="outputBox">
+        <div class="output">
+            <textarea class="chart" name="chartOutput" id="chartOutput" cols="30" rows="10" readonly></textarea>
+            <a onclick="copy()">Copiar</a>
         </div>
-        <div>
-            <strong>Ningún mensaje fue encontrado</strong>
-            <p>ingresa el texto que desees encriptar o desencriptar.</p>
+        <div id="messageBox" hidden>
+            <strong>Mensaje vacío o Inválido</strong>
+            <p>Ingrese el texto que desees encriptar o desencriptar.</p>
         </div>
     </article>
     <script src="./index.js"></script>
