--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Encriptador</title>
 </head>
 <body>
+    <h1>Encryptador</h1>
     <main>
-        <h1>Encryptador</h1>
         <textarea class="chart" name="chartInbox" id="chartInput" cols="30" rows="10"></textarea>
         <div class="info">
             <img src="assets/info_icon.svg" alt="info_icon">
@@ -23,7 +23,7 @@
     <article id="outputBox">
         <div class="output">
             <textarea class="chart" name="chartOutput" id="chartOutput" cols="30" rows="10" readonly></textarea>
-            <a onclick="copy()">Copiar</a>
+            <button onclick="copy()">Copiar</button>
         </div>
         <div id="messageBox" hidden>
             <strong>Mensaje vacío o Inválido</strong>
